# AI-Canvas-tauri

./: .gitignore  .release-notes-v0.6.2.md  .release-notes-v0.6.3.md  .release-notes-v0.6.4.md  AGENTS.md  AGENTS.md.bak.20260525-1709  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.test.json  vite.config.ts  vitest.config.ts
.codebuddy/memory/: 2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  MEMORY.md
.github/workflows/: ci.yml  release.yml
.workbuddy/memory/: 2026-07-10.md
doc/: ADR-图片节点矢量标注层.md  PointEdit包迁移实施计划.md  对话助手-Agent能力实施方案.md  对话式画布助手-功能方案.md  开发指南.md  打包与发版流程.md  架构说明.md  模型调用-APIMart.md  模型调用-GRSAI.md  模型调用-RunningHUB.md  模型调用-火山方舟.md  预设提示词-图片.md  预设提示词-文本.md  预设提示词.md
doc/adr/: 0001-agent-preset-tools.md  0002-agent-runtime-evolution.md  0003-director-desk-prebuilt-runtime.md  0004-local-mcp-control-bridge.md
doc/plans/: 2026-07-19-advanced-preset-sequences.md  2026-07-19-agent-preset-tools.md  2026-07-19-automated-testing-ci.md  2026-07-19-custom-model-execution-protocol.md  2026-07-19-provider-model-catalog.md  2026-07-20-model-protocol-smart-import.md  2026-07-20-project-library-modal.md  2026-07-21-agent-provider-config-import.md  2026-07-21-agent-runtime-evolution-design.md  2026-07-21-agent-runtime-evolution.md  2026-07-21-director-desk-on-demand-runtime.md  2026-07-21-director-desk-production-runtime.md  2026-07-21-director-desk-tauri-window.md  2026-07-23-generated-asset-prompt-tags.md  2026-07-23-image-reference-request-mode.md  2026-07-23-media-provider-registry.md  2026-07-23-read-only-web-research.md  2026-07-24-local-mcp-control-bridge.md  2026-07-24-project-scoped-history.md
docs/plans/: 2026-07-20-prompt-chip-polish.md  2026-07-22-xiaoluo-camera-studio.md  2026-07-22-xiaoluo-panorama-design.md  2026-07-22-xiaoluo-panorama.md  2026-07-23-image-toolbars-design.md
scripts/: ai-canvas-mcp.mjs  dev-with-director.mjs  director-desk-release.json  ensure-director-desk.mjs  pre-commit  prepare-director-desk.mjs  setup-hooks.js  start-director-desk.sh  sync-version.js  tauri-with-director.mjs  update-director-desk-release.mjs
src/: App.tsx  RootView.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  update-key.key.pub  update-key.pub
src-tauri/capabilities/: default.json  director-desk.json  dreamina-login.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant_web.rs  clipboard.rs  comfyui.rs  director_desk_runtime.rs  dreamina.rs  file_transfer.rs  lib.rs  main.rs  mcp_bridge.rs  onnxrt.rs  provider_docs.rs
src-tauri/src/comfyui/: mod.rs
src-tauri/src/onnx/: config.rs  gpu.rs  mod.rs  worker.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: AssetSearchWindow.tsx  AssetsPanel.tsx  Canvas.tsx  DramaAssetsPanel.tsx  Header.tsx  NodeMenu.tsx  OutputHistoryPanel.tsx  ProjectLibraryModal.tsx  ProjectSettingsPopover.tsx  SessionProjectTabs.tsx  SettingsPanel.tsx  Sidebar.tsx  SplashScreen.tsx  Titlebar.tsx  Toast.tsx  WorkflowPanel.tsx
src/constants/: api.ts
src/hooks/: useAutoSave.ts  useCanvasContextMenu.ts  useCompletionFlash.ts  useConnectionDropMenu.ts  useGroupSelection.ts  useImageViewportGesture.ts  useKeyboardShortcuts.ts  useMascotStatus.ts  useNodeContextMenu.ts  useNodeCreation.ts  useNodeSnap.ts  useReferencedImageWatcher.ts  useShiftProportional.ts  useToolbarEdit.ts  useTooltipAutoPlacement.ts
tests/: setup.ts
(+392 files in other folders)
