[package]
name = "ai-canvas-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_canvas_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
# 默认 features = download-binaries（CPU 版 onnxruntime，构建时自动下载并静态链接）。
# 不启用 directml：DirectML 版仅环境初始化就触发 DX12，部分 GPU/驱动上驱动级死锁。
ort = "2.0.0-rc.12"
image = "0.25"
