[package]
name = "ai-canvas-tauri"
version = "0.6.0"
edition = "2021"

[lib]
name = "ai_canvas_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
base64 = "0.22"
fs2 = "0.4"
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
# 默认 features = download-binaries（CPU 版 onnxruntime，构建时自动下载并静态链接）。
# directml feature 启用 DirectML EP（仅 Worker 子进程使用，主进程永不初始化 DirectML）。
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "directml"] }
image = "0.25"

# Windows: DXGI 适配器枚举（GPU 探测用）+ 剪贴板 CF_HDROP 文件写入
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dwm",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_Foundation",
] }
