[package]
name = "ai-canvas-tauri"
version = "0.6.5"
edition = "2021"

[lib]
name = "ai_canvas_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
base64 = "0.22"
fs2 = "0.4"
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
image = "0.25"

# Intel macOS 没有 ort 2.0.0-rc.12 的预编译 ONNX Runtime，因此该目标不编译 ONNX Worker。
# 其他平台继续使用当前版本；DirectML EP 仅由 Windows Worker 初始化。
[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "directml"] }

# Windows: DXGI 适配器枚举（GPU 探测用）+ 剪贴板 CF_HDROP 文件写入
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dwm",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_Foundation",
] }
